# kuka-comms

./: README.md  kuka-psudocode.txt  pyproject.toml
kuka_comm_lib/: __init__.py  connection.py  exceptions.py  positions.py  robot.py
kuka_comm_lib/cli/reader/: __main__.py  sync.py
kuka_comm_lib/cli/writer/: side2side.py
