[tool.poetry]
name = "kuka_comm_lib"
version = "0.1.0"
description = ""
authors = ["Isaac", "Max"]
readme = "README.md"

[tool.poetry.dependencies]
# this is only because its the default on my laptop, can be changed later i think
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
